# jsonrpc-proxy

./: Cargo.toml
generic-proxy/: Cargo.toml
generic-proxy/src/: lib.rs
plugins/eth-tx-signer/: Cargo.toml
plugins/eth-tx-signer/src/: config.rs  lib.rs
