[package]
name = "eth-tx-signer"
version = "0.1.0"
authors = ["Hernando Castano <castano.ha@gmail.com>"]
edition = "2018"

[dependencies]
cli-params = { path = "../../proxy/cli-params" }
ethsign = "0.3.0"
ethereum-types = "0.5.2"
fnv = "1.0"
rpc = { version = "10.1", package = "jsonrpc-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
upstream = { path = "../upstream" }
